--- a/index.html
+++ b/index.html
@@ -699,8 +699,24 @@ body.card-editor-active #addCard{
 .inventory-context-item:hover,.inventory-context-item:focus-visible{background:#eef4ff;color:var(--primary);outline:none}
 .inventory-context-item[disabled]{color:var(--muted);cursor:default;background:none}
 @media (max-width:600px){
-  .inv-row{grid-template-columns:minmax(0,1fr);row-gap:8px;align-items:flex-start}
-  .inv-row .inv-tools{justify-self:flex-start;width:100%;padding-inline:var(--inv-row-padding-x);flex-wrap:wrap;row-gap:6px}
+  .inv-row{
+    --inv-row-padding-y:10px;
+    display:flex;
+    flex-direction:column;
+    align-items:stretch;
+    gap:10px;
+    padding-inline:var(--inv-row-padding-x);
+    min-height:auto;
+  }
+  .inv-name{align-items:flex-start;gap:6px;flex-wrap:wrap}
+  .inv-name .inv-label{white-space:normal}
+  .inv-row .inv-tools{
+    justify-content:flex-start;
+    width:100%;
+    padding-inline:0;
+    flex-wrap:wrap;
+    gap:6px;
+  }
 }
 .qty-icon:hover{color:#1a73e8;transform:translateY(-1px)}
 .qty-icon:focus-visible{outline:2px solid rgba(26,115,232,.35);outline-offset:3px}
