Fix mobile inventory modal text rendering

--- a/index.html
+++ b/index.html
@@ -720,6 +720,7 @@ body.card-editor-active #addCard{
     gap:10px;
     padding-inline:var(--inv-row-padding-x);
     min-height:auto;
+    overflow:visible;
   }
   .inv-name{align-items:flex-start;gap:6px;flex-wrap:wrap}
   .inv-name .inv-label{white-space:normal}
